# docmost-local-mcp

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  glama.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: write-tools.md
native/auth-helper/: Cargo.toml
npm/launcher/: cli.js  package.json  postinstall.js
npm/platform-template/: package.json.tmpl
scripts/: create-publish-dir.mjs  e2e-live.env.example  e2e-live.sh  generate-helper-packages.mjs  helper-targets.mjs  sync-helper-binary.mjs
src/: cli.ts  debug.rs  docmost-client.ts  docmost_client.rs  lib.rs  main.rs  prosemirror.rs  server.rs  server.ts  startup-config.ts  startup_config.rs  types.rs  types.ts  version.rs
src/auth/: auth-manager.ts  local-auth-server.ts  local_server.rs  manager.rs  mod.rs  native-helper-launcher.ts  webview.rs
src/docmost_client/: mod.rs  writes.rs
src/position/: arith.rs  mod.rs
src/prosemirror/: mod.rs  nodes.rs  reader.rs
src/server/: render.rs  tools.rs  tools_page_write.rs  tools_write.rs
src/storage/: keyring_store.rs  mod.rs  state-store.ts  state_store.rs
src/types/: inputs.rs  mod.rs
src/utils/: debug.ts  prosemirror.ts
tests/: auth_flow_test.rs  docmost-client.test.ts  docmost_client_test.rs  docmost_page_structure_test.rs  docmost_write_test.rs  live_e2e_test.rs  mcp_server_test.rs  native-helper-launcher.test.ts  prosemirror.test.ts  prosemirror_test.rs  startup-config.test.ts  startup_config_test.rs  state-store.test.ts  state_store_test.rs
(+3 files in other folders)
