[package]
name = "docmost-local-mcp"
version = "0.3.0"
edition = "2024"
description = "Docmost MCP server for local IDE integrations"
license = "MIT"
repository = "https://github.com/wisflux/docmost-local-mcp"

[features]
default = ["native-webview"]
native-webview = ["dep:tao", "dep:wry"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
futures = "0.3.31"
keyring = "3.6.3"
once_cell = "1.21.3"
open = "5.3.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.6.1", features = ["transport-io", "client"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = { version = "0.34.6", optional = true }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
urlencoding = "2.1.3"
wry = { version = "0.54.3", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
